[gd_scene load_steps=17 format=2]

[ext_resource path="res://enemy/model/enemy.glb" type="PackedScene" id=1]
[ext_resource path="res://enemy/animation.tres" type="AnimationNodeStateMachine" id=2]
[ext_resource path="res://enemy/enemy.gd" type="Script" id=3]
[ext_resource path="res://enemy/turn.anim" type="Animation" id=4]
[ext_resource path="res://enemy/audio/Fish Death 1.wav" type="AudioStream" id=5]
[ext_resource path="res://enemy/audio/Fish Attack 1.wav" type="AudioStream" id=6]
[ext_resource path="res://enemy/audio/Fish Death 4.wav" type="AudioStream" id=7]
[ext_resource path="res://enemy/audio/Fish Death 3.wav" type="AudioStream" id=8]
[ext_resource path="res://enemy/audio/Fish Attack 2.wav" type="AudioStream" id=9]
[ext_resource path="res://enemy/audio/Fish Attack 3.wav" type="AudioStream" id=10]
[ext_resource path="res://enemy/audio/Fish Attack 4.wav" type="AudioStream" id=11]
[ext_resource path="res://enemy/audio/Fish Death 2.wav" type="AudioStream" id=12]
[ext_resource path="res://player/audio/Sword Blocked.wav" type="AudioStream" id=13]

[sub_resource type="AnimationNodeStateMachinePlayback" id=4]

[sub_resource type="CylinderShape" id=5]
height = 1.0

[sub_resource type="BoxShape" id=6]

[node name="Enemy" instance=ExtResource( 1 )]
collision_layer = 2
collision_mask = 3
axis_lock_motion_z = true
move_lock_z = true
script = ExtResource( 3 )
attack1 = ExtResource( 6 )
attack2 = ExtResource( 9 )
attack3 = ExtResource( 10 )
attack4 = ExtResource( 11 )
death1 = ExtResource( 5 )
death2 = ExtResource( 12 )
death3 = ExtResource( 8 )
death4 = ExtResource( 7 )

[node name="Armature" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -0.00991607, 1.08509 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="Skeleton" parent="Armature" index="0"]
bones/20/bound_children = [ NodePath("BoneAttachment") ]
bones/36/bound_children = [ NodePath("Head") ]

[node name="BoneAttachment" parent="Armature/Skeleton" index="0"]
transform = Transform( 0.103061, 0.989684, 0.0995086, -0.991157, 0.110589, -0.0733484, -0.0835963, -0.091069, 0.992329, 1.21718, 0.785671, 0.239869 )

[node name="Head" type="BoneAttachment" parent="Armature/Skeleton" index="2"]
transform = Transform( -1, -3.77909e-16, 8.02679e-07, -3.85343e-14, 1, -4.75363e-08, -8.02679e-07, -4.75363e-08, -1, 0.000673629, 1.48941, 0.42261 )
bone_name = "HeadIK"

[node name="SoundAttack" type="AudioStreamPlayer3D" parent="Armature/Skeleton/Head" index="0"]
transform = Transform( -0.0402767, -0.995021, -0.0911633, -0.996263, 0.0469686, -0.0724913, 0.0764122, 0.0879029, -0.993194, -1.21788, -0.724921, 0.184211 )
stream = ExtResource( 13 )
unit_size = 3.0

[node name="SoundDeath" type="AudioStreamPlayer3D" parent="Armature/Skeleton/Head" index="1"]
stream = ExtResource( 5 )
unit_size = 5.0

[node name="AnimationPlayer" parent="." index="1"]
anims/turn = ExtResource( 4 )

[node name="AnimationTree" type="AnimationTree" parent="." index="2"]
tree_root = ExtResource( 2 )
anim_player = NodePath("../AnimationPlayer")
active = true
process_mode = 0
root_motion_track = NodePath("Armature/Skeleton:RootMotion")
parameters/playback = SubResource( 4 )
parameters/move/blend_position = 0.0

[node name="RootMotionView" type="RootMotionView" parent="." index="3"]
animation_path = NodePath("../AnimationTree")
zero_y = false

[node name="CollisionShape" type="CollisionShape" parent="." index="4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 5 )

[node name="AreaReach" type="Area" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )
collision_layer = 0
collision_mask = 2
monitorable = false
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="CollisionShape" type="CollisionShape" parent="AreaReach" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 1 )
shape = SubResource( 6 )
